Fix T61184 linked curves with curve modifiers arent drawn correctly

Force Displist to Mesh conversion if there is any modifier.

This is until we find a better way to store the batches per objects.

Also fix draw cache functions that were not returning final mesh edges.